additional-addons/argo-workflows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
  name: argo-workflows-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: argoworkflows.emzien.click
      http:
        paths:
          - backend:
              service:
                name: argo-server
                port:
                  number: 2746
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argoworkflows.emzien.click
      secretName: argoworkflows-server-tls
